--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,13 @@ language: node_js
 node_js:
   - "stable"
   - "4"
+sudo: false
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.8
+      - g++-4.8
